# pipe

./: CMakeLists.txt  Makefile  shell.nix
include/brg/: pipe
source/: brgim_pipe.cpp  brgim_pipe.t.cpp
